# sheets-pyspark

./: .gitignore  README.md  pyproject.toml  sheets_bigquery.ipynb  sheets_pyspark.ipynb
airflow-demo/: Dockerfile  README.md  requirements.txt  test_notebook_local.py
airflow-demo/config/: notebook_execution_config.yaml  requirements.txt
airflow-demo/dags/: sheets_bigquery_notebook_dag.py  sheets_bigquery_vertex_dag.py  sheets_spark_dataproc_dag.py
airflow-demo/docker/: Dockerfile  requirements.txt  run_notebook.py
airflow-demo/notebooks/: CELL_TAGGING_GUIDE.md  sheets_bigquery_scheduled.ipynb  sheets_spark_dev.ipynb
airflow-demo/scripts/: README.md
airflow-demo/setup/: setup.sh  setup_dataproc.sh  setup_dataproc_requirements.txt  setup_vertex.sh  setup_vertex_ai.sh  setup_workbench.sh
sample_data/: legacy_charges.csv  merchant_excluded.csv  merchant_send_mid_label.csv
utils/: seed_gsheets.py  test_gspread_access.py
