[project]
name = "sheets-pyspark"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gspread",
    "pandas",
    "oauth2client",
    "ipykernel",
    "dataproc-spark-connect",
    "setuptools",
    "bigframes",
    "db-dtypes",
    "apache-airflow>=2.7.0",
    "apache-airflow-providers-google>=10.0.0",
    "google-cloud-notebooks>=1.0.0",
]
