[project]
name = "sheets-pyspark"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gspread",
    "oauth2client",
    "ipykernel",
    "dataproc-spark-connect",
    "bigframes",
    "db-dtypes",
    "apache-airflow",
    "apache-airflow-providers-google",
    "google-cloud-storage",
]
